# rust-scheduler-notify

./: Cargo.toml  README.md
config/: scheduler.yaml
scripts/: execute_scheduler.sh  list-largest-files.sh  podman-clean.sh
src/: main.rs
src/api/: schema.rs
src/command/: process.rs
src/config/: load_and_parse.rs  mod.rs
src/error/: scheduler.rs
