[package]
name = "rust-scheduler-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
#clokwerk = "0.4.0"
notify-rust = "4.11.3"
mio = "0.8.11"
tokio = { version = "1.41.1", features = ["full"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.4" }
clap = { version = "4.5.21", features = ["derive"] }
serde_yaml = "0.9.34"
cron = "0.13.0"
chrono = "0.4.38"
